==> vivask/Meteo.ESP32/components/ssd1306/ssd1306.c <==
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "i2cdev.h"
#include "esp_log.h"
#include "ssd1306.h"
#include "fonts.h"
#define TAG "SSD1306"
#define ABS(x)   ((x) > 0 ? (x) : -(x))
#define I2C_FREQ_HZ 100000

inline static esp_err_t SSD1306_WRITECOMMAND(uint8_t command)
{
    return i2c_dev_write_reg(&dev, 0x00, &command, 1);
}

inline static esp_err_t SSD1306_WRITEDATA(uint8_t data)
{
    return i2c_dev_write_reg(&dev, 0x40, &data, 1);
}

esp_err_t SSD1306_Init(void) {

	esp_err_t err = 0;

	/* Init LCD */
	err |= SSD1306_WRITECOMMAND(0xAE); //display off
	err |= SSD1306_WRITECOMMAND(0x20); //Set Memory Addressing Mode   
	err |= SSD1306_WRITECOMMAND(0x10); //00,Horizontal Addressing Mode;01,Vertical Addressing Mode;10,Page Addressing Mode (RESET);11,Invalid
	err |= SSD1306_WRITECOMMAND(0xB0); //Set Page Start Address for Page Addressing Mode,0-7
	err |= SSD1306_WRITECOMMAND(0xC8); //Set COM Output Scan Direction
	err |= SSD1306_WRITECOMMAND(0x00); //---set low column address
	err |= SSD1306_WRITECOMMAND(0x10); //---set high column address
	err |= SSD1306_WRITECOMMAND(0x40); //--set start line address
	err |= SSD1306_WRITECOMMAND(0x81); //--set contrast control register
	err |= SSD1306_WRITECOMMAND(0xFF);
	err |= SSD1306_WRITECOMMAND(0xA1); //--set segment re-map 0 to 127
	err |= SSD1306_WRITECOMMAND(0xA6); //--set normal display
	err |= SSD1306_WRITECOMMAND(0xA8); //--set multiplex ratio(1 to 64)
	err |= SSD1306_WRITECOMMAND(0x3F); //
	err |= SSD1306_WRITECOMMAND(0xA4); //0xa4,Output follows RAM content;0xa5,Output ignores RAM content
	err |= SSD1306_WRITECOMMAND(0xD3); //-set display offset
	err |= SSD1306_WRITECOMMAND(0x00); //-not offset
	err |= SSD1306_WRITECOMMAND(0xD5); //--set display clock divide ratio/oscillator frequency
	err |= SSD1306_WRITECOMMAND(0xF0); //--set divide ratio
	err |= SSD1306_WRITECOMMAND(0xD9); //--set pre-charge period
	err |= SSD1306_WRITECOMMAND(0x22); //
	err |= SSD1306_WRITECOMMAND(0xDA); //--set com pins hardware configuration
	err |= SSD1306_WRITECOMMAND(0x12);
	err |= SSD1306_WRITECOMMAND(0xDB); //--set vcomh
	err |= SSD1306_WRITECOMMAND(0x20); //0x20,0.77xVcc
	err |= SSD1306_WRITECOMMAND(0x8D); //--set DC-DC enable
	err |= SSD1306_WRITECOMMAND(0x14); //
	err |= SSD1306_WRITECOMMAND(0xAF); //--turn on SSD1306 panel
	
	/* Clear screen */
	SSD1306_Fill(SSD1306_COLOR_BLACK);
	
	/* Update screen */
	err |= SSD1306_UpdateScreen();
	
	/* Set default values */
	SSD1306.CurrentX = 0;
	SSD1306.CurrentY = 0;
	
	if (err == ESP_OK) {
		/* Initialized OK */
		SSD1306.Initialized = 1;
		return ESP_OK;
	}
	
	/* Return FAIL */
	return ESP_FAIL;
}
